[gd_scene load_steps=5 format=2]

[ext_resource path="res://items/ItemTemplate.tscn" type="PackedScene" id=1]
[ext_resource path="res://items/ItemHazard.gd" type="Script" id=2]
[ext_resource path="res://assets/sprites/barrel.png" type="Texture" id=3]

[sub_resource type="CylinderShape" id=1]
radius = 5.99804
height = 1.18501

[node name="ExplosiveBarrel" instance=ExtResource( 1 )]
collision_mask = 11
script = ExtResource( 2 )

[node name="Sprite3D" parent="." index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.931169, 0 )
texture = ExtResource( 3 )

[node name="CollisionShape" parent="." index="1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.907467, 0 )

[node name="ExplosionArea" type="Area" parent="." index="2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0195472, 0 )
collision_layer = 0
collision_mask = 27
monitorable = false
priority = 100.0

[node name="CollisionShape" type="CollisionShape" parent="ExplosionArea" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.666341, 0 )
shape = SubResource( 1 )

[node name="ExplosionTimer" type="Timer" parent="." index="3"]
wait_time = 0.8
one_shot = true

[node name="DelayExplosion" type="Timer" parent="." index="4"]
wait_time = 0.2
one_shot = true

[node name="VfxTimer" type="Timer" parent="." index="5"]
wait_time = 3.0
one_shot = true

[connection signal="timeout" from="ExplosionTimer" to="." method="_on_ExplosionTimer_timeout"]
[connection signal="timeout" from="DelayExplosion" to="." method="_on_DelayExplosion_timeout"]
[connection signal="timeout" from="VfxTimer" to="." method="_on_VfxTimer_timeout"]
